[package]
name = "ruraft-quinn"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "QUIC transport layer implementation for ruraft"

[dependencies]
futures = { workspace = true }
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
pin-project = { workspace = true }
ruraft-net = { path = "../net" }
quinn = "0.10"
