[package]
name = "ruraft-tcp"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "TCP transport layer implementation for ruraft"

[features]
default = ["dns"]

serde = ["ruraft-net/serde"]

# enable DNS node address resolver
dns = ["ruraft-net/dns"]

tls = ["dep:async-rustls"]
native-tls = ["dep:async-native-tls"]

dangerous_configuration = ["async-rustls?/dangerous_configuration"]

metrics = ["ruraft-net/metrics"]

test = ["ruraft-net/test", "smol_str", "rustls-pemfile", "async-rustls/dangerous_configuration"]

[dependencies]
agnostic = { workspace = true, features = ["net"] }
futures = { workspace = true }
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
pin-project = { workspace = true }
ruraft-net = { path = "../net" }
viewit = { workspace = true }

async-rustls = { version = "0.4", optional = true }
async-native-tls = { version = "0.5", optional = true }

# test feature
smol_str = { version = "0.2", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
ruraft-core = { path = "../../core", features = ["test"] }
ruraft-net = { path = "../net", features = ["test"] }
async-rustls = { version = "0.4", features = ["dangerous_configuration"] }
tokio = { version = "1.32", features = ["full"] }
smol_str = { workspace = true }
