[package]
name = "ruraft-tcp"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "TCP transport layer implementation for ruraft"

[features]
default = ["dns"]

serde = ["ruraft-net/serde"]

# enable DNS node address resolver
dns = ["ruraft-net/dns"]

tls = ["dep:futures-rustls"]
native-tls = ["dep:async-native-tls"]

# dangerous_configuration = ["futures-rustls?/dangerous_configuration"]

metrics = ["ruraft-net/metrics"]

test = ["ruraft-net/test", "smol_str", "rustls-pemfile", "tls", "async-native-tls/vendored", "dep:native-tls", "test-cert-gen"]

[dependencies]
agnostic = { workspace = true, features = ["net"] }
futures = { workspace = true }
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
pin-project = { workspace = true }
ruraft-net = { path = "../net" }
viewit = { workspace = true }

futures-rustls = { version = "0.25", optional = true }
async-native-tls = { version = "0.5", optional = true }

# test feature
smol_str = { version = "0.2", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls = { version = "0.22", optional = true }
native-tls = { version = "0.2", optional = true, features = ["vendored"] }
test-cert-gen = { version = "0.9", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
ruraft-core = { path = "../../core", features = ["test"] }
ruraft-net = { path = "../net", features = ["test"] }
rustls = { version = "0.22" }
futures-rustls = { version = "0.25" }
async-native-tls = { version = "0.5", features = ["vendored"] }
tokio = { version = "1.32", features = ["full"] }
smol_str = { workspace = true }
test-cert-gen = { version = "0.9" }
rustls-pemfile = { version = "2" }
native-tls = { version = "0.2", features = ["vendored"] }
