[package]
name = "ruraft-tcp"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "TCP transport layer implementation for ruraft"

[features]
default = ["dns"]

serde = ["ruraft-net/serde"]

# enable DNS node address resolver
dns = ["ruraft-net/dns"]
dns-over-quic = ["dns", "ruraft-net/dns-over-quic"]
dns-over-h3 = ["dns", "ruraft-net/dns-over-h3"]
dns-over-https-rustls = ["dns", "ruraft-net/dns-over-https-rustls"]
dns-over-rustls = ["dns", "ruraft-net/dns-over-rustls"]
dns-over-openssl = ["dns", "ruraft-net/dns-over-openssl"]
dns-over-native-tls = ["dns", "ruraft-net/dns-over-native-tls"]
dns-webpki-roots = ["dns", "ruraft-net/dns-webpki-roots"]
dns-native-certs = ["dns", "ruraft-net/dns-native-certs"]
dnssec-openssl = ["dns", "ruraft-net/dnssec-openssl"]
dnssec-ring = ["dns", "ruraft-net/dnssec-ring"]
dnssec = ["dns", "ruraft-net/dnssec"]

tls = ["dep:futures-rustls"]
native-tls = ["dep:async-native-tls", "dep:native-tls"]


metrics = ["ruraft-net/metrics"]

test = ["ruraft-net/test", "smol_str", "rustls-pemfile", "tls", "async-native-tls/vendored", "dep:native-tls", "test-cert-gen"]

[dependencies]
agnostic = { workspace = true, features = ["net"] }
futures = { workspace = true }
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
pin-project = { workspace = true }
ruraft-net = { path = "../net" }
viewit = { workspace = true }

futures-rustls = { version = "0.25", optional = true }
async-native-tls = { version = "0.5", optional = true }

# test feature
smol_str = { version = "0.2", optional = true }
rustls-pemfile = { version = "2", optional = true }
native-tls = { version = "0.2", optional = true, features = ["vendored"] }
test-cert-gen = { version = "0.9", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
ruraft-core = { path = "../../core", features = ["test"] }
ruraft-net = { path = "../net", features = ["test"] }
futures-rustls = { version = "0.25" }
async-native-tls = { version = "0.5", features = ["vendored"] }
tokio = { version = "1.32", features = ["full"] }
smol_str = { workspace = true }
test-cert-gen = { version = "0.9" }
rustls-pemfile = { version = "2" }
native-tls = { version = "0.2", features = ["vendored"] }
