[package]
name = "asyncraft"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "asyncraft"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
pyo3 = "0.20"
ruraft-python = { path = "../core", features = ["async-std"] }
smallvec = "1"