[package]
name = "async-std-raft"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "async_std_raft"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
pyo3 = "0.20"
ruraft-python = { path = "../core", features = ["async-std"] }
smallvec.workspace = true
