[package]
name = "async-std-raft"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "async_std_raft"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20"
ruraft-python = { path = "../core", features = ["async-std"] }

[build-dependencies]
cargo-manifest = "0.13"
heck = "0.4"
ruraft-python = { path = "../core", features = ["async-std"] }
